--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://Nagdy29.github.io/ELearninng",
+  "homepage" : "https://Nagdy29.github.io/Courses",
   "name": "e-learn",
   "version": "0.1.0",
   "private": true,
