--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "homepage" : "https://Nagdy29.github.io/Onlinne",
+
+  "homepage" : "https://Nagdy29.github.io/website",
+
   
   "name": "e-learn",
   
@@ -80,12 +82,14 @@
   "start": "react-scripts start",
   
     
-  "build": "react-scripts build",
-  
 
  "predeploy":"npm run build",
     "deploy":"gh-pages -d build",
-    
+
+  "build": "react-scripts build",
+  
+
+
   "test": "react-scripts test",
   
     
